--- a/src/app/pages/enrollments/enrollments.component.scss
+++ b/src/app/pages/enrollments/enrollments.component.scss
@@ -7,3 +7,9 @@
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     margin-bottom: 2rem;
 }
+.enrollment-form {
+    border: 1px solid #ddd;
+    border-radius: 8px;
+    background-color: #f9f9f9;
+  }
+  
