--- a/src/app/pages/batch/batch-list/batch-list.component.html
+++ b/src/app/pages/batch/batch-list/batch-list.component.html
@@ -11,9 +11,15 @@
             <div class="d-flex justify-content-sm-end">
               <input class="form-control w-50 me-2" type="search" placeholder="Search..." aria-label="Search"
                 [(ngModel)]="searchQuery" />
-              <button type="button" class="btn btn-primary" (click)="openModel()">
+              <!-- <button type="button" class="btn btn-primary" (click)="openModel()" >
+                <i class="fa-solid fa-plus"></i> Add Batch
+              </button> -->
+              <button type="button" class="btn btn-primary" routerLink="/admin/enrollments/0">
                 <i class="fa-solid fa-plus"></i> Add Batch
               </button>
+
+
+
             </div>
           </div>
         </div>
@@ -46,7 +52,7 @@
                     <td>{{ batch.endDate | date : "MMM d, y, h:mm a" }}</td>
                     <td>{{ batch.teacher }}</td>
                     <td class="text-center">
-                      <button class="btn btn-primary  me-2" (click)="editBatch(batch)">
+                      <button class="btn btn-primary  me-2" (click)="editBatch(batch.batchId)">
                         <i class="fa-solid fa-pen-to-square"></i>
                       </button>
                       <button class="btn btn-danger " (click)="deleteBatch(batch.batchId)">
@@ -73,74 +79,3 @@
     <p class="mt-3" style="color: gray;">Loading batches, please wait...</p>
   </div>
 </ng-container>
-<div class="modal" id="studentModal" #studentModal>
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title">{{isEditMode ? 'Edit Batches':'Add New Batches'}}</h5>
-        <button type="button" class="btn-close" (click)="closeModal()" aria-label="Close"></button>
-      </div>
-      <div class="modal-body">
-        <form id="batchForm" [formGroup]="batchForm" (ngSubmit)="saveBatch()">
-          <div class="row">
-
-            <div class="col-md-6 mb-3">
-              <label for="batchName" class="form-label">Batch Name</label>
-              <i class="fas fa-layer-group"></i>
-              <input type="text" class="form-control" id="batchName" placeholder="Batch Name"
-                formControlName="batchName" required />
-              <small class="text-danger"
-                *ngIf="batchForm.get('batchName')?.invalid && batchForm.get('batchName')?.touched">
-                Batch Name is required.
-              </small>
-            </div>
-
-            <div class="col-md-6 mb-3">
-              <label for="teacher" class="form-label">Teacher Name</label>
-              <i class="fas fa-chalkboard-teacher"></i>
-              <input type="text" class="form-control" id="teacher" placeholder="Teacher Name" formControlName="teacher"
-                required />
-              <small class="text-danger" *ngIf="batchForm.get('teacher')?.invalid && batchForm.get('teacher')?.touched">
-                Teacher Name is required.
-              </small>
-            </div>
-
-            <div class="col-md-6 mb-3">
-              <label for="startDate" class="form-label">Start Date</label>
-              <i class="fas fa-calendar-alt"></i>
-              <input type="date" class="form-control" id="startDate" formControlName="startDate" required />
-              <small class="text-danger"
-                *ngIf="batchForm.get('startDate')?.invalid && batchForm.get('startDate')?.touched">
-                Start Date is required.
-              </small>
-            </div>
-
-            <div class="col-md-6 mb-3">
-              <label for="endDate" class="form-label">End Date</label>
-              <i class="fas fa-calendar-check"></i>
-              <input type="date" class="form-control" id="endDate" formControlName="endDate" required />
-              <small class="text-danger" *ngIf="batchForm.get('endDate')?.invalid && batchForm.get('endDate')?.touched">
-                End Date is required.
-              </small>
-            </div>
-
-            <div class="col-12 text-end">
-              <button *ngIf="!isEditMode" type="submit" class="btn btn-primary"
-                [disabled]="batchForm.invalid || isLoading">
-                <span *ngIf="isLoading" class="spinner-border spinner-border-sm" role="status"
-                  aria-hidden="true"></span>
-                {{ isLoading ? 'Saving...' : 'Save Batch' }}
-              </button>
-              <button *ngIf="isEditMode" type="submit" class="btn btn-warning">
-                <span *ngIf="isLoading" class="spinner-border spinner-border-sm" role="status"
-                  aria-hidden="true"></span>
-                {{ isLoading ? 'Updating...' : 'Update Batch' }}
-              </button>
-            </div>
-
-          </div>
-        </form>
-      </div>
-    </div>
-  </div>
-</div>
