--- a/src/app/pages/batch/batch-list/batch-list.component.html
+++ b/src/app/pages/batch/batch-list/batch-list.component.html
@@ -61,7 +61,7 @@
         ></button>
       </div>
       <div class="modal-body">
-        <form id="batchForm">
+        <form id="batchForm" [formGroup]="batchForm">
           <div class="row">
             <div class="col-md-6">
               <div class="form-group">
@@ -71,6 +71,7 @@
                   class="form-control"
                   id="batchName"
                   placeholder="Batch Name"
+                  formControlName="batchName"
                   required
                 />
               </div>
@@ -82,6 +83,7 @@
                   type="text"
                   class="form-control"
                   id="teacher"
+                  formControlName="teacher"
                   placeholder="Teacher Name"
                   required
                 />
@@ -94,6 +96,7 @@
                   type="date"
                   class="form-control"
                   id="startDate"
+                  formControlName="startDate"
                   required
                 />
               </div>
@@ -101,11 +104,19 @@
             <div class="col-md-6">
               <div class="form-group">
                 <i class="fas fa-calendar-check"></i>
-                <input type="date" class="form-control" id="endDate" required />
+                <input
+                  type="date"
+                  class="form-control"
+                  id="endDate"
+                  formControlName="endDate"
+                  required
+                />
               </div>
             </div>
             <div class="col-12 text-end">
-              <button type="submit" class="btn btn-primary">Save Batch</button>
+              <button type="submit" class="btn btn-primary" (click)="onSave()">
+                Save Batch
+              </button>
             </div>
           </div>
         </form>
